--- a/src/components/App.css
+++ b/src/components/App.css
@@ -752,7 +752,8 @@ h4:not(:hover) > .lang
 #perma #same .provider { display:inline-block; vertical-align: middle; line-height:0; }
 #perma #same .provider img { height:22px; display:inline-block;} 
 #perma #same .provider:not(:first-child) { margin-left:10px;}
-#perma #same .provider.bdr { margin-bottom:2px; margin-left:8px;}
+#perma #same .provider.bdr { margin-bottom:2px; }
+#perma #same .provider.bdr:not(:first-child) { margin-left:8px;}
 #perma #same .provider.bdr img { height:28px;}
 
 
@@ -1125,19 +1126,20 @@ TODO
  }
 .resource .data.legal-props > div h4 > .ulink:not(.bdr):not(.bda) { margin-left:-21px; }
 
-.resource .data.legal-props > div h4 { min-height:27px; }
-.resource .data.legal-props > div h4 a { vertical-align:top; }
+/* .resource .data.legal-props > div h4 { min-height:27px; } */
+.resource .data.legal-props > div h4 a {  display:flex; align-items: center; }
 
+.resource .data.legal-props > div h4 > .ulink [href*="LD_GRETIL"]::before,
 .resource .data.legal-props > div h4 > .ulink [href*="LD_rKTs"]::before ,
 .resource .data.legal-props > div h4 > .ulink [href*="LD_BDRC"]::before { background-image:url("/logo.svg"); background-position:center;
    background-size:18px auto; content:' ';display:inline-block;width:25px;height:25px;  background-color:white;border-radius:13px; 
-   background-repeat:no-repeat; vertical-align:middle; position:absolute; margin-left:-45px;
+   background-repeat:no-repeat; margin-bottom:2px; margin-left:-45px;margin-right:20px;
+    /* vertical-align:middle; position:absolute;  */
 }
 
-.resource .data.legal-props > div h4 > .ulink [href*="LD_rKTs"]::before {
-   background-image:url("/RKTS.png"); background-size:14px auto;
-}
-
+.resource .data.legal-props > div h4 > .ulink [href*="LD_rKTs"]::before { background-image:url("/RKTS.png"); background-size:14px auto; }
+.resource .data.legal-props > div h4 > .ulink [href*="LD_GRETIL"]::before { background-image:url("/GRETIL.png"); background-size:14px auto; }
+/* TODO exhaustive metadata provider list */
 
 /* ------------------------------------------------------------------------------------------------------------------------ extended properties */
 
