--- a/src/components/App.css
+++ b/src/components/App.css
@@ -76,7 +76,7 @@
 
 .App { min-height:100vh;}
 
-.App *,.App *::before,.App *::after { font-family:"Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif !important;}
+[role='tooltip'] *, .App *,.App *::before,.App *::after { font-family:"Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif !important;}
 
 .SearchPane { width:1000px; margin:auto;margin-top:80px;max-width:90%; z-index:0;background:white;padding:50px; padding-bottom:0;
    min-height:calc(100vh - 80px - 50px * 0); padding-top:0 !important;  padding-bottom:0; }
@@ -942,9 +942,10 @@ h4:not(.first)
 
 
 
-.hover-menu { position:absolute; width:50px;right:-10px; top:0; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0;}
-.hover-menu img { height:22px; vertical-align: super;  pointer-events: none;}
-
+.hover-menu { position:absolute; width:50px;right:-10px; top:0; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0; height:28px;
+line-height:12px; } 
+.hover-menu img { height:26px; vertical-align: super;  flex-shrink:0; cursor:pointer; }
+.hover-menu span { position:absolute;color:#d73449;font-weight:900;font-size:10px; right:0; bottom:-2px;cursor:pointer;}
 
 .resource .data [data-prop="bdo:note"] .sub:hover .hover-menu,
 h4:hover .hover-menu {  opacity:1 !important; pointer-events: auto !important; }
@@ -1446,8 +1447,15 @@ TODO
 .resource .data .sub .subsub h4.first { font-size:14px;font-weight:400;color:#343434; }
 .resource .data .sub .subsub a.propref { font-weight:400;letter-spacing:0px; font-size:14px;}
 .resource .data h3 a.propref:hover,.resource .data h4 a.propref:hover { border-bottom:1px solid black;}
-div[role="tooltip"] { margin:30px; max-width:400px;  }
-div[role="tooltip"] > div { font-weight:bold;font-size:16px; }
+
+div[role="tooltip"] { margin:0px;  opacity:1;  }
+div[role="tooltip"] > div { font-weight:500;font-size:12px; background-color:white; border-radius:0; color:#4d4d4d;padding:0; max-width:450px;
+   box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5),0 -2px 4px rgba(187, 187, 187, 0.5); margin-bottom:5px;margin-right:5px;}
+div[role="tooltip"] > div > span { padding:12px 16px; display:block; white-space: nowrap; vertical-align: middle;}
+div[role="tooltip"] > div > span + span { padding-top:6px;}
+div[role="tooltip"] > div > span img { height:20px;vertical-align: middle; display:inline-block; margin:0 4px 2px 8px;} 
+div[role="tooltip"] > div b { font-weight:700; }
+
 .commentP,.commentT {max-width:700px !important; }
 .commentT { padding:10px !important;}
 
